--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.18.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^5.2.0",
+    "react-toastify": "^8.0.3",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1"
   },
